src/webapp/css/app.css
/* app css stylesheet */

body {
    padding: 20px;
    font-family: Arial, Verdana, sans-serif;
}

#folder-image {
    height: 100%;
    width: 100%;
    position: relative;
}

#folder-image > a > img {
    width: 100%;
    max-width: 300px;
    margin: auto;
}

ul {
    margin-left: 0px;
}

ul.huge {
    font-size: 36px;
}

.huge li {
    margin: 10px;
    padding: 20px;
    line-height: 1;
    list-style: none;
}

.browse > a:visited, .forparents > a:visited, .forteachers > a:visited, .forauthors > a:visited, .forvendors > a:visited, .qanda > a:visited, .keyideas > a:visited, .fornerds > a:visited  {
    color: black;
}

.browse > a:link, .forparents > a:link, .forteachers > a:link, .forauthors > a:link, .forvendors > a:link, .qands > a:link, .keyideas > a:link, .fornerds > a:link  {
    color: black;
}

.browse {
    background-color: #3B653D;
}

.forvendors {
    background-color: #ff9558;
    color: black;
}

.keyideas {
    background-color: #ff665f;
}

.fornerds {
    background-color: #849fe2;
}

.forauthors {
    background-color: #ac8cdb;
}

.forparents {
    background-color: #87ce50;
}

.forteachers {
    background-color: yellow;
}

.qanda {
    background-color: #c5a830;
}

.emailInput {
    background-color: rgb(155, 240, 242);
}

.classDisplay {
    background-color: rgb(106, 237, 231);
}

.objectiveDisplay {
    background-color: rgb(12, 226, 219);
}

.ui-warning {
            background-color: darkgoldenrod;
            margin: 20px;
            padding-left: 10px;
            padding-right: 10px;
            padding-top: 1px;
            padding-bottom: 1px;
        }

.browse-page {
    font-family: Geneva, Arial, Helvetica, sans-serif;
}

ul.objective-list {
    list-style-type: none;
    padding-left: 0;
    margin-left: 0;
}

ul.objective-list > li {
    padding-top: 10px;
    padding-bottom: 10px;
}

.previous-next-objective {
    border-radius: 2px;
    background-color: #3B653D;
    color: white;
    font-family: "Comic Sans MS", "Marker Felt", sans-serif;
    font-size: 75%;
    padding: 2px;
}

.objective-list-entry-id {
    border-radius: 5px;
    background-color: #3B653D;
    color: white;
    font-family: "Comic Sans MS", "Marker Felt", sans-serif;
    font-size: 120%;
    padding: 4px;
}

.objective-list-entry-description {
    display: block;
    font-family: Geneva, Arial, Helvetica, sans-serif;
    font-size: 120%;
    padding-top: 5px;
    margin-top: 5px;
}

.edjective-warning {
    font-size: 100%;
    color: white;
    background-color: rgba(255, 5, 14, 0.67);
    width: 40%;
    margin: 20px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 3px;
    padding-bottom: 3px;
}

div.flashcard-page {
    background-color: #3B653D;
    padding: 20px;
    border: solid #000000;
    border-width: 3px;
    border-radius: 20px;
    text-align: center;
    margin-top: 30px;
}

div.flashcard-page p {
    font-weight: bold;
    font-size: 40px;
    padding-top: 60px;
    padding-bottom: 80px;
}

